Using JBoss defined system properties to decide location of exported results are cab2b_server.properties. Added code in QueryBizLogic to delete individual CSVs after creating ZIP. Removed unnecessary File.seperator. Reviewed : Gaurav Mehta